# easm

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  package-lock.json  tailwind.config.js
.cargo/: config.toml
.sqlx/: query-02cc07e3b82af6cf3bd7c279f796866467e1ed975e8db84e493d1e458e07fe57.json  query-1183a54b3a3fc13714b8a06778756917372c0ab60a4d61d5712bbab9d2cc69e8.json  query-120f43ccb6a327c9f333962f3003c9a9c590f04c279d03dbed03630ec249bb6b.json  query-1501eb4ff0acea337d7c91e9bc44506d56b551746f9dbba0f60f321824dfb1c0.json  query-18488a2950af755f9dd07e5bfc8fd8337e6653299d7164df5a069d9601dddd72.json  query-1a7478732f1edf565e4b1bffaa5aa1da0abe807262e8d33cd55ed0e3f7ea91f4.json  query-1d015f85077c900c2dd01c8d56af1d44461885edc86baed6028832f19092d7e9.json  query-20bcc327d81855edb5f0df7d591a0c12f0e8016f4dc9836832db3be08fb31825.json  query-2722dc418e3c5fa3b3b682da254d4a43aa7cc33b1c3652398d7164665fc5ea85.json  query-29cae6b9e919864b0d5eea0a1b6f4f8eabfbccdbbed700ebe375fde69e64a92b.json  query-2aabe644f1100cf60a29dab683f076cb975e3607c4634449864d07559c49843f.json  query-339db887cba0f6443fc8436c62d4620b2a399a21c896dce33912f05267e244cf.json  query-39c73d28c55a805fcb6497178690957085721c6a40005a58f92dbc5791f2b00c.json  query-39cacfda8d1b74a5db7a37ba33faf1c7f44c2624fd9a38eba259b9560fde0b43.json  query-3af2292456b3764c3a8ed1bf9a2cae13260da11ab742b262693b200a2bee349f.json  query-3afd57992cedac1618fb33ea9de328402f1b9021962f7f89036a9869ff9c9b4d.json  query-3d0b70cdaefc9b09e6163231a1d7404047700242db394425d533ebc8c67ff8e9.json  query-3f8d8936c9f6cd7687818270b2a55036b6abc35f14ee0f80c1c45b28e19faab0.json  query-425644cc8b3670d17cd5c924b825735fd71b5adff893738e92523c77daa277fe.json  query-497c3ef5a5334f1efdfac0880dd39312d98529d3528f87fd463d6f8e9dbd4d75.json  query-4a842321cd3e30d48a7f7595c7cb8a4a5ba8bbc2dfad3de71ea5c121f06699d9.json  query-4c55c3ead280e51b995cbdd54ec81ca484f6569a5df1eda10351ba5c70ea0368.json  query-4c92f0c94167ba0b03da66ea7dd950c90b8a565069730d8a8311afe6991df870.json  query-51e861c62af26ab5828aae00d7e640983d2f45f7730457e38a000fb3b25d9959.json  query-5980d8ca0751dd72506f9d21f810d02c84cf8d2a53fd279a7c16c5641da984e4.json  query-5b5ae1e2bd9739265df9e5f606596e4012e1e2396016db76af06ae3ad4fac8cf.json  query-64a9b4f2f1692df4070516dff4bf12886619016719debaba5f7b2a4fb420f766.json  query-66552b910e2080260b6a8338c4b77ee032ab3610f552e1c3ace9734923d42371.json  query-69e1f6fbe2484820e13138df2eec08ba70d360b32b7dc0a232f1e99203626b1f.json  query-6bd87127b775c3aa302a6ee3c97f3d1cc61581c875e6098cdfc6cdf4730c0c08.json  (+42 more)
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  main.rs  routes.rs  state.rs  test_utils.rs
crates/api/src/handlers/: asset_handler.rs  auth_handler.rs  discovery_task_handler.rs  health_handler.rs  mod.rs  organization_handler.rs  report_handler.rs  vulnerability_handler.rs
crates/api/src/middleware/: auth.rs  mod.rs
crates/api/tests/: asset_handler_test.rs  auth_handler_test.rs  health_test.rs  mod.rs  vulnerability_handler_test.rs
crates/backend/: Cargo.toml
crates/backend/src/: errors.rs  lib.rs  traits.rs
crates/backend/src/models/: asset.rs  discovery_job.rs  job_asset_link.rs  mod.rs  organization.rs  port.rs  technology.rs  user.rs  vulnerability.rs
crates/backend/src/services/: asset_service.rs  discovery_service.rs  mod.rs  notification_service.rs  organization_service.rs  technology_service.rs  user_service.rs  vulnerability_service.rs
crates/backend/tests/: asset_service_test.rs  asset_test.rs  discovery_service_test.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  results.rs  tasks.rs
crates/discovery/src/cert_transparency/: mod.rs
crates/discovery/src/dns/: mod.rs
crates/discovery/src/fingerprinting/: mod.rs  service.rs  web.rs
crates/discovery/src/port_scan/: mod.rs  naabu.rs
crates/discovery/src/vulnerability/: mod.rs  nuclei.rs
crates/discovery/src/web_crawl/: httpx.rs  mod.rs
crates/discovery/tests/: nuclei_example.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: main.rs
crates/frontend/src/api/: mod.rs
crates/frontend/src/components/layout/: mod.rs
crates/frontend/src/components/ui/: asset_card.rs  asset_table.rs  chart.rs  data_table.rs  discovery_task.rs  mod.rs  vulnerability_card.rs
crates/frontend/src/pages/: mod.rs
crates/frontend/src/pages/assets/: detail.rs  mod.rs
crates/frontend/src/pages/auth/: hooks.rs  mod.rs
crates/frontend/src/pages/dashboard/: mod.rs
crates/frontend/src/pages/discovery/: mod.rs
crates/frontend/src/pages/not_found/: mod.rs
crates/frontend/src/pages/technologies/: mod.rs
crates/frontend/src/pages/vulnerabilities/: mod.rs
crates/frontend/src/router/: mod.rs
crates/frontend/src/utils/: mod.rs
crates/frontend/style/: main.css  output.css
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: database.rs  errors.rs  lib.rs
crates/infrastructure/src/database/: migrations.rs
crates/infrastructure/src/repositories/: asset.rs  discovery_job.rs  factory.rs  mod.rs  organization.rs  port.rs  technology.rs  tests.rs  user.rs  vulnerability.rs
crates/infrastructure/src/utils/: mod.rs  testing.rs
crates/infrastructure/tests/: asset_repository_test.rs  database_test.rs  discovery_job_repository_test.rs  migrations_test.rs  organization_repository_test.rs  port_repository_test.rs  repository_factory_test.rs  technology_repository_test.rs  user_repository_test.rs  utils_test.rs  vulnerability_repository_test.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  errors.rs  lib.rs  types.rs
crates/shared/tests/: config_test.rs  errors_test.rs  types_test.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: job_processor.rs  main.rs
tests/: Cargo.toml  README.md  api_integration_test.rs  api_tests.rs  database_tests.rs  discovery_integration_tests.rs  end_to_end_workflow_test.rs  frontend_integration_test.rs  port_integration_tests.rs  service_integration_tests.rs  task_integration_tests.rs  technology_integration_tests.rs  utils_test.rs  vulnerability_integration_tests.rs
(+5 files in other folders)
