[workspace]
resolver = "2"
members = [
  "crates/api",
  "crates/backend",
  "crates/frontend",
  "crates/infrastructure",
  "crates/discovery",
  "crates/shared",
  "crates/tasks",

  "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Abouzar Parvan <abzcoding@gmail.com>"]
license = "MIT"
repository = "https://github.com/abzcoding/easm"

[workspace.dependencies]
async-trait = "0.1"
argon2 = { version = "0.5" }
axum = { version = "0.8", features = ["macros", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
http-body-util = { version = "0.1" }
hyper = { version = "1.6", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
jsonwebtoken = { version = "9.3" }
rand = "0.9"
redis = { version = "0.29", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "macros",
  "chrono",
  "json", 
  "bigdecimal", 
  "time", 
  "migrate"
] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.44", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
  "time",
  "sync",
  "test-util",
] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "set-header",
  "timeout",
] }
tower-service = "0.3"
anyhow = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng", "js"] }
validator = { version = "0.20", features = ["derive"] }


# frontend
gloo = "0.11"
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_router = { version = "0.7", features = ["ssr"] }
reqwest = { version = "0.12", features = ["json"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"

# dev
serial_test = "3.2"

[profile.release]
strip = true
lto = true
panic = "abort"
