[workspace]
resolver = "2"
members = [
  "crates/api",
  "crates/backend",
  "crates/frontend",
  "crates/infrastructure",
  "crates/discovery",
  "crates/shared",
  "crates/tasks",

  "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Abouzar Parvan <abzcoding@gmail.com>"]
license = "MIT"
repository = "https://github.com/abzcoding/easm"

[workspace.dependencies]
async-trait = "0.1"
argon2 = { version = "0.5" }
axum = { version = "0.8", features = ["macros", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
http-body-util = { version = "0.1" }
hyper = { version = "1.6", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
jsonwebtoken = { version = "9.3" }
rand = { version = "0.9", default-features = true }
getrandom = { version = "0.3", features = [] }
redis = { version = "0.29", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "macros",
  "chrono",
  "json",
  "bigdecimal",
  "time",
  "migrate",
] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.44", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
  "time",
  "sync",
  "test-util",
] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "set-header",
  "timeout",
] }
tower-service = "0.3"
anyhow = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = [
  "v4",
  "serde",
  "fast-rng",
] }
validator = { version = "0.20", features = ["derive"] }
scraper = { version = "0.23", features = ["serde"] }
trust-dns-resolver = "0.23"
url = { version = "2.4", features = ["serde"] }
regex = "1.11"
lazy_static = "1.4"
tempfile = "3.19"

# frontend
gloo = "0.11"
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_router = { version = "0.7", features = ["ssr", "nightly"] }
leptos_meta = { version = "0.7", features = ["ssr"] }
reqwest = { version = "0.12", features = ["json"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "HtmlInputElement",
  "HtmlSelectElement",
  "ScrollToOptions",
  "ScrollBehavior",
  "Storage",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "History",
  "Location",
  "UrlSearchParams",
  "Url",
] }
console_error_panic_hook = "0.1.7"
log = "0.4"
console_log = "1.0.0"
fantoccini = "0.21"
criterion = "0.5"

# dev
serial_test = "3.2"
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
mockall = "0.13"
test-context = "0.4"

[profile.release]
strip = true
lto = true
panic = "abort"
