[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
api = { path = "../crates/api" }
backend = { path = "../crates/backend" }
infrastructure = { path = "../crates/infrastructure" }
discovery = { path = "../crates/discovery" }
shared = { path = "../crates/shared" }

# Add test dependencies
tokio = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
http-body-util = { workspace = true }
tower-service = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[[test]]
name = "database_tests"
path = "database_tests.rs"

[[test]]
name = "api_tests"
path = "api_tests.rs"

[[test]]
name = "service_integration_tests"
path = "service_integration_tests.rs"

[[test]]
name = "discovery_integration_tests"
path = "discovery_integration_tests.rs"

[[test]]
name = "task_integration_tests"
path = "task_integration_tests.rs"
