[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
api = { path = "../crates/api" }
backend = { path = "../crates/backend" }
infrastructure = { path = "../crates/infrastructure" }
discovery = { path = "../crates/discovery" }
shared = { path = "../crates/shared" }
criterion = { workspace = true }

[dependencies]
# Add test dependencies
tokio = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
fantoccini = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
http-body-util = { workspace = true }
tower-service = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.21.3"

[[test]]
name = "database_tests"
path = "database_tests.rs"

[[test]]
name = "api_tests"
path = "api_tests.rs"

[[test]]
name = "service_integration_tests"
path = "service_integration_tests.rs"

[[test]]
name = "discovery_integration_tests"
path = "discovery_integration_tests.rs"

[[test]]
name = "task_integration_tests"
path = "task_integration_tests.rs"

[[test]]
name = "api_integration_test"
path = "api_integration_test.rs"

[[test]]
name = "frontend_integration_test"
path = "frontend_integration_test.rs"

[[test]]
name = "port_integration_tests"
path = "port_integration_tests.rs"

[[test]]
name = "technology_integration_tests"
path = "technology_integration_tests.rs"

[[test]]
name = "vulnerability_integration_tests"
path = "vulnerability_integration_tests.rs"

[[test]]
name = "end_to_end_workflow_test"
path = "end_to_end_workflow_test.rs"
