[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
backend = { path = "../backend" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
http-body-util.workspace = true
tower-service = { workspace = true}
anyhow = { workspace = true }
