[package]
name = "discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "discovery"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
serde = {workspace = true}
uuid = {workspace = true}
anyhow = { workspace = true }
trust-dns-resolver = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }