[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
log = { workspace = true }
gloo = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true } 
rand = { workspace = true }
getrandom = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
