[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "infrastructure"
path = "src/lib.rs"

[dependencies]
backend = { path = "../backend" }
shared = { path = "../shared" }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }

[dev-dependencies]
rand.workspace = true
