[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "infrastructure"
path = "src/lib.rs"

[dependencies]
backend = { path = "../backend" }
shared = { path = "../shared" }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[dev-dependencies]
rand.workspace = true
