[package]
name = "tasks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tasks"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }
discovery = { path = "../discovery" }
backend = { path = "../backend" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }